--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -8,17 +8,25 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>br.com.cesar</groupId>
-	<artifactId>fronted</artifactId>
+	<artifactId>frontend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<build>
 		<resources>
 			<resource>
-				<directory>./dist/frontend</directory>
+				<directory>./dist</directory>
 				<targetPath>static</targetPath>
 			</resource>
 		</resources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
