--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.security.oauth2.client.registration.google.client-id=774157374265-1jirjd62aov3c1kdd2vm9igdurdnrm50.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=itg-xPpdpRVRWkgrkVEyJPw-
+ 
